<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bookApp</string>
    <string name="action_settings">Settings</string>
    <string name="add_book_option">Add Book</string>
    <string name="log_reading_option">Reading Log</string>
    <string name="reading_timer">Reading Timer</string>
    <string name="welcome_message">Welcome to BookApp</string>
    <string name="activity_add_book">AddBook</string>
    <string name="select_text">Enter Book Info:</string>
    <string name="read_list">Read List</string>
    <string name="to_read_list">To-Read List</string>
    <string name="add_book_button">Add Book</string>
    <string name="reset_button">Reset</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_pages"># of Pages</string>
    <string name="book_rating">Rating:</string>
    <string name="book_review">Review:</string>
    <string name="book_author_label">Author:</string>
    <string name="book_title_label">Title:</string>
    <string name="initial_timer_button">Start</string>
    <string name="view_read_book_list">View All Books</string>
    <string name="title_activity_view_book_list">ViewBookList</string>
    <string name="title_activity_view_book">ViewBook</string>
    <string name="title_activity_edit_book">EditBook</string>
	<string name="save_button_text">Save</string>
	<string name="cancel_button_text">Cancel</string>
	<string name="edit_screen_title">Edit a Book</string>
	<string name="view_book_edit">Edit</string>
	<string name="view_book_delete">Delete</string>
	<string name="add_book_checkbox">Read</string>
	<string name="clear_button">Clear</string>
	<string name="initial_timer_text">Start Reading!</string>
	<string name="list_header_date">Date</string>
	<string name="list_header_time">Time</string>
	<string name="menu_option_alpha_author">Alphabetical -- Author</string>
	<string name="menu_option_alpha_title">Alphabetical -- Title</string>
	<string name="menu_option_read">Read</string>
	<string name="sort_menu">Sort</string>
	<string name="create_book_list_button">Create List</string>
	<string name="view_book_lists_button">View Lists</string>
	<string name="add_book_to_list_button">Add Book to List</string>
	<string name="list_label">Lists:</string>
	<string-array name="array">
	    <item>
	        Test
	    </item>
	    <item >Test2</item>
	    
	    
	</string-array>
</resources>
