<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".resetButtonActivity" >

    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/select_text"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/book_title" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookTitle"
        android:layout_below="@+id/bookTitle"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/book_author" />

    <EditText
        android:id="@+id/bookPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookAuthor"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/book_pages"
        android:inputType="number" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingDescription"
        android:layout_toRightOf="@+id/addBook"
        android:text="@string/reset_button" />

    <Button
        android:id="@+id/addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookPages"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/add_book_button" />

    <TextView
        android:id="@+id/ratingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addBook"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/selectText"
        android:text="@string/book_rating"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingDescription"
        android:layout_toRightOf="@+id/addBook"
        android:textSize="18dp"
        android:text="out of 10" />

    <EditText
        android:id="@+id/rating1"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ratingDescription"
        android:layout_alignBottom="@+id/ratingDescription"
        android:layout_alignLeft="@+id/selectText"
        android:layout_marginLeft="18dp"
        android:ems="10" />

    <RatingBar
        android:id="@+id/bookRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookPages"
        android:layout_centerHorizontal="true" />

</RelativeLayout>