<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ViewBookFragment" >


    <TextView
        android:id="@+id/bookTitle"
        android:layout_marginTop="-20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="bookTitle" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="bookAuthor" />

    <TextView
        android:id="@+id/bookPages"
         android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bookPages" />

    <CheckBox
        android:id="@+id/bookReadCheckbox"
        android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book_checkbox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ratingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_rating" />

        <RatingBar
            android:id="@+id/bookRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_review" />

        <TextView
            android:id="@+id/bookReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_review" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	
        >

    <Button
        android:id="@+id/deleteButton"
         android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_book_delete" />

    <Button
        android:id="@+id/editButton"
         android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:text="@string/view_book_edit" />
</LinearLayout>
</LinearLayout>