<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:id="@+id/main_activity"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
    
        android:text="@string/welcome_message"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/addBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:contentDescription="@string/add_book_option"
            android:src="@drawable/bookicon" />

        <ImageButton
            android:id="@+id/addBookToListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:contentDescription="@string/add_book_to_list_button"
            android:src="@drawable/createlisticon" />

        <ImageButton
            android:id="@+id/viewAllBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:contentDescription="@string/view_read_book_list"
            android:src="@drawable/allbooksicon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/home_add_book_text"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            
            android:text="@string/add_book_option" />

        <TextView
            android:id="@+id/home_add_book_to_list_text"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/add_book_to_list_button" />

        <TextView
            android:id="@+id/home_view_all_books_text"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_read_book_list" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/createBookList"
            android:contentDescription="@string/create_book_list_button"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:src="@drawable/listicon" />

        <ImageButton
            android:id="@+id/viewAllLists"
            android:contentDescription="@string/view_read_book_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:src="@drawable/viewlisticon" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/home_create_list_text"
            android:gravity="center"
            android:layout_marginRight="23dp"
            android:maxWidth="72dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_book_list_button" />

        <TextView
            android:id="@+id/home_view_list_text"
             android:gravity="center"
             android:maxWidth="72dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_book_lists_button" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
         android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/readingTimerButton"
            android:contentDescription="@string/view_read_book_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:src="@drawable/timericon" />

        <ImageButton
            android:id="@+id/logReadingButton"
            android:contentDescription="@string/log_reading_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_button"
            android:src="@drawable/readinglogicon" />

    </TableRow>

    <TableRow
         android:gravity="center"
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/home_reading_timer_text"
             android:gravity="center"
             android:layout_marginLeft="0dp"
            android:layout_marginRight="15dp"
            android:maxWidth="72dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_timer" />

        <TextView
            android:id="@+id/home_reading_log_text"
             android:maxWidth="72dp"
              android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_reading_option" />

    </TableRow>

</LinearLayout>