<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
      tools:context=".EditBookFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:textSize="23sp"
        android:text="@string/edit_screen_title" />

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:inputType="text"
        
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/bookPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <RatingBar
        android:id="@+id/bookRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
     <Button
        android:id="@+id/cancelButton"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

</LinearLayout>
</LinearLayout>
